<resources>
    <string name="Day">D</string>
    <string name="Month">M</string>
    <string name="Year">Y</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_time_and_pay">累積時間與費用</string>
    <string name="account_b_copy">複製</string>
    <string name="account_code">邀請碼</string>
    <string name="account_history_term">※為減輕系統負擔，僅保留三個月內之資料</string>
    <string name="account_not_change_gift_currently">這裡空空如也，趕緊去集點兌換個好東西吧！</string>
    <string name="account_not_get_point_currently">這裡空空如也，去任務專區看看有什麼好玩的吧！</string>
    <string name="account_t_history">點數歷程</string>
    <string name="account_t_overview">點數總覽</string>
    <string name="account_t_redemption">兌換紀錄</string>
    <string name="account_title">我的帳戶</string>
    <string name="accountoverview_available">可用點數</string>
    <string name="accountoverview_b_send">送出</string>
    <string name="accountoverview_expired">於 %1$s 到期</string>
    <string name="accountoverview_remind">＊點數自入帳起至隔年年底有效</string>
    <string name="accountoverview_t_invitation">請輸入邀請碼/活動代號</string>
    <string name="accountredemption_b_expired">已過期</string>
    <string name="accountredemption_b_unuse">未使用</string>
    <string name="accountredemption_b_used">已使用</string>
    <string name="accountredemption_date">使用期限：%1$s</string>
    <string name="activity_title">活動專區</string>
    <string name="app_name">Taipei Main Station Navigator</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="back">返回</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="btxt_atm">ATM</string>
    <string name="btxt_barrier_free_route">Barrier-Free Navigation</string>
    <string name="btxt_call">Call</string>
    <string name="btxt_contact_us">Contact Us</string>
    <string name="btxt_contact_us_msg">Askey Computer Corp; Taiwan Toll Free: 0800–66–9595</string>
    <string name="btxt_evaluation">Rate this app</string>
    <string name="btxt_exit">Exit</string>
    <string name="btxt_fan_group">Taipei Main Station Navigator Fan Group</string>
    <string name="btxt_fun_taipei">臺北好行</string>
    <string name="btxt_gate">Ticket Gate</string>
    <string name="btxt_gift">Interactive Signage</string>
    <string name="btxt_gift_tutorial">Instructions</string>
    <string name="btxt_hello_taipei">Taipei City Simple Petition System</string>
    <string name="btxt_hs_rail">Taiwan High Speed Rail</string>
    <string name="btxt_language">Language</string>
    <string name="btxt_locker">Locker</string>
    <string name="btxt_more_link">More Links</string>
    <string name="btxt_navi">My Location</string>
    <string name="btxt_parking">Smart Parking</string>
    <string name="btxt_push_message">Push Notification</string>
    <string name="btxt_quick_navi">Quick Navigation</string>
    <string name="btxt_rail">Taiwan Railways</string>
    <string name="btxt_search_cancel">Cancel</string>
    <string name="btxt_ss_airport">Songshan Airport</string>
    <string name="btxt_store">Store Guide</string>
    <string name="btxt_tb_station">Taipei Bus Station</string>
    <string name="btxt_ticket_counter">Ticket Counter</string>
    <string name="btxt_toilet">Restroom</string>
    <string name="btxt_toilet_accessible">Accessible Restroom</string>
    <string name="btxt_toilet_family">Family Restroom</string>
    <string name="btxt_toilet_female">Women\'s Restroom</string>
    <string name="btxt_toilet_male">Men\'s Restroom</string>
    <string name="btxt_tpe_mrt">Taipei MRT</string>
    <string name="btxt_tpe_mrt_bl">Bannan Line</string>
    <string name="btxt_tpe_mrt_g">Songshan-Xindian Line</string>
    <string name="btxt_tpe_mrt_r">Tamsui-Xinyi Line</string>
    <string name="btxt_tpe_pb">Taipei Public Bus</string>
    <string name="btxt_trans">Timetable Information</string>
    <string name="btxt_tts">Voice Over</string>
    <string name="btxt_tur_next_page">Next Page</string>
    <string name="btxt_tur_start">Start</string>
    <string name="btxt_tutorial">Tutorial</string>
    <string name="btxt_ty_airport">Taoyuan Airport</string>
    <string name="btxt_ty_mrt">Taoyuan Airport MRT</string>
    <string name="btxt_version">Version Number</string>
    <string name="btxt_youbike">YouBike</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checkme_s_execute_collection">開始集點</string>
    <string name="checkme_s_go">GO</string>
    <string name="checkme_s_home">首頁</string>
    <string name="checkme_s_mission_his_list">任務歷程</string>
    <string name="checkme_s_problem_feedback">問題回報</string>
    <string name="checkme_s_qa">查看Q&amp;A</string>
    <string name="checkme_s_qa_date">發生日期</string>
    <string name="checkme_s_qa_detail_hint">輸入詳細情況</string>
    <string name="checkme_s_qa_email_company">逛街購物</string>
    <string name="checkme_s_qa_email_content">會員手機號碼：%1$s\10 回報類型：%2$s\10 任務類型：%3$s\10 發生地點：%4$s\10 發生日期：%5$s\10 詳細內容：%6$s\10</string>
    <string name="checkme_s_qa_email_title">%1$s客服回報：</string>
    <string name="checkme_s_qa_event_cost">消費得點</string>
    <string name="checkme_s_qa_event_scan">掃描得點</string>
    <string name="checkme_s_qa_event_store">到店得點</string>
    <string name="checkme_s_qa_format_error">資料填寫未完成</string>
    <string name="checkme_s_qa_phone_hint">請輸入會員手機號碼(必填)</string>
    <string name="checkme_s_qa_question_advice">意見提供</string>
    <string name="checkme_s_qa_question_store">回報店家問題</string>
    <string name="checkme_s_qa_store_name_hint">輸入店家/門市名稱</string>
    <string name="checkme_s_qa_submit">送出</string>
    <string name="checkme_s_qa_title">賺點時遇到問題了嗎？或是有任何提議想分享給我們，請留下您的寶貴意見寄給客服，我們隨即為您處理。</string>
    <string name="checkme_taipei_service_phone">亞旭電腦股份有限公司; 免付費聯絡電話：0800–66–9595</string>
    <string name="chose_searching_result">請選擇您的愛車</string>
    <string name="com.crashlytics.android.build_id">2d4861f6-e538-47c5-acdd-94c0e10575b0</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b&gt;facebook.com/device&lt;/b&gt; and enter your code.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions_0">Confirm your code on Facebook.</string>
    <string name="com_facebook_smart_device_instructions_1">1.\9Go to the Menu</string>
    <string name="com_facebook_smart_device_instructions_2">2.\9Select Device Requests</string>
    <string name="com_facebook_smart_device_instructions_3">3.\9Confirm code.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">You\'re in control - choose what info you want to share with apps.</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="gc_part">公中段</string>
    <string name="hint_car_licence">請至少輸入3位數的車牌號碼</string>
    <string name="lot_selection">選擇停車場</string>
    <string name="map_guide">地圖導引</string>
    <string name="remain_lots">剩餘車位</string>
    <string name="search_car">尋找愛車</string>
    <string name="search_condition_selection">選擇查詢條件</string>
    <string name="search_licence">車牌查詢</string>
    <string name="search_lot_code">車格查詢</string>
    <string name="shi_min_road">市民大道</string>
    <string name="tc_part">塔城段</string>
    <string name="txt_login">Log in</string>
    <string name="txt_map_function_hint_position_desc">Locating your position</string>
    <string name="txt_map_function_hint_position_title">My Position</string>
    <string name="txt_map_function_hint_title">Hint of the Map</string>
    <string name="txt_map_function_hint_vision_desc">Browse Map from Your View</string>
    <string name="txt_map_function_hint_vision_title">Toggle Map View</string>
    <string name="txt_mission_gain_point">Gain UUPON Mission Points</string>
    <string name="txt_register">Register</string>
    <string name="txt_setting">Setting</string>
    <string name="txt_tur_04_desc">Set up Barrier-free routes\10for your One-Stop\10Dine – Shop – Travel experience</string>
    <string name="txt_uupon_point">UUPON Points</string>
    <string name="txt_welcome">Hello,</string>
    <string name="txt_welcome_not_login">You have not log in yet</string>
    <string name="under_ground">地下停車場</string>
</resources>