<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/scroll" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:paddingLeft="35dp" android:paddingTop="22dp" android:paddingRight="35dp" android:paddingBottom="22dp" android:layout_width="match_parent" android:layout_height="match_parent">
        <Button android:textSize="14sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/qa_btn" android:background="@drawable/feedback_qa_btn" android:layout_width="match_parent" android:layout_height="50dp" android:foreground="?attr/selectableItemBackground" android:text="@string/checkme_s_qa"/>
        <TextView android:textSize="12sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="36dp" android:text="@string/checkme_s_qa_title"/>
        <EditText android:textSize="14sp" android:id="@+id/phone_edit" android:background="@drawable/feedback_qa_edit" android:paddingLeft="6dp" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="24dp" android:hint="@string/checkme_s_qa_phone_hint" android:singleLine="true" android:inputType="number" android:imeOptions="actionDone"/>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp">
            <EditText android:textSize="14sp" android:ellipsize="end" android:gravity="center_vertical" android:id="@+id/qa_question_edit" android:background="@drawable/feedback_qa_edit" android:paddingLeft="6dp" android:paddingRight="11dp" android:focusable="false" android:longClickable="false" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginRight="3dp" android:minHeight="40dp" android:text="@string/checkme_s_qa_question_store" android:singleLine="true" android:drawableRight="@mipmap/btn_arrow_down" android:layout_weight="1.62" android:inputType="none"/>
            <EditText android:textSize="14sp" android:ellipsize="end" android:gravity="center_vertical" android:id="@+id/qa_event_edit" android:background="@drawable/feedback_qa_edit" android:paddingLeft="6dp" android:paddingRight="11dp" android:focusable="false" android:longClickable="false" android:layout_width="0dp" android:layout_height="wrap_content" android:minHeight="40dp" android:text="@string/checkme_s_qa_event_store" android:singleLine="true" android:drawableRight="@mipmap/btn_arrow_down" android:layout_weight="1" android:inputType="none"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp">
            <EditText android:textSize="14sp" android:ellipsize="end" android:gravity="center_vertical" android:id="@+id/qa_store_name_edit" android:background="@drawable/feedback_qa_edit" android:paddingLeft="6dp" android:paddingRight="11dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginRight="3dp" android:minHeight="40dp" android:hint="@string/checkme_s_qa_store_name_hint" android:singleLine="true" android:layout_weight="1.62" android:imeOptions="actionDone"/>
            <EditText android:textSize="14sp" android:ellipsize="end" android:gravity="center_vertical" android:id="@+id/qa_date_edit" android:background="@drawable/feedback_qa_edit" android:paddingLeft="6dp" android:paddingRight="11dp" android:focusable="false" android:longClickable="false" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/checkme_s_qa_date" android:singleLine="true" android:drawableRight="@mipmap/btn_arrow_down" android:layout_weight="1" android:inputType="none"/>
        </LinearLayout>
        <EditText android:textSize="14sp" android:gravity="top" android:id="@+id/qa_detail_edit" android:background="@drawable/feedback_qa_edit" android:paddingLeft="6dp" android:paddingTop="9dp" android:paddingRight="6dp" android:paddingBottom="9dp" android:scrollbars="vertical" android:clickable="true" android:layout_width="match_parent" android:layout_height="103dp" android:layout_marginTop="14dp" android:foreground="?attr/selectableItemBackgroundBorderless" android:hint="@string/checkme_s_qa_detail_hint" android:imeOptions="actionDone"/>
        <Button android:textSize="14sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/qa_submit_btn" android:background="@drawable/feedback_qa_submit_btn" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginTop="18dp" android:foreground="?attr/selectableItemBackground" android:text="@string/checkme_s_qa_submit"/>
    </LinearLayout>
</ScrollView>
