<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/navHead" android:background="@drawable/bg_nav_header" android:paddingLeft="@dimen/drawer_nav_header_left" android:paddingRight="@dimen/drawer_nav_header_right" android:paddingBottom="@dimen/drawer_nav_header_bottom" android:layout_width="match_parent" android:layout_height="173dp">
    <TextView android:textSize="14sp" android:textColor="@android:color/white" android:id="@+id/labHello" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="14dp" android:text="@string/txt_welcome"/>
    <TextView android:textSize="14sp" android:textColor="@android:color/white" android:id="@+id/txtHelloSub" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:text="@string/txt_welcome_not_login" android:layout_below="@+id/labHello"/>
    <TextView android:textSize="12sp" android:textColor="#518eff" android:id="@+id/labGainPoint" android:background="@drawable/bg_nav_point" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/txt_uupon_point" android:layout_alignParentBottom="true"/>
    <TextView android:textSize="18sp" android:textColor="#95baff" android:gravity="center" android:id="@+id/txtPoint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="12dp" android:text="0" android:layout_toRightOf="@+id/labGainPoint" android:layout_alignTop="@+id/labGainPoint" android:layout_alignBottom="@+id/labGainPoint"/>
    <TextView android:textSize="12sp" android:textColor="@color/nav_login" android:gravity="center" android:id="@+id/tbtnLogin" android:background="@drawable/bg_radius_fill" android:layout_width="70dp" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/txt_login" android:lines="1" android:layout_alignParentTop="true" android:layout_alignParentEnd="true"/>
    <TextView android:textSize="12sp" android:textColor="@color/nav_register" android:gravity="center" android:id="@+id/tbtnRegister" android:background="@drawable/bg_radius" android:layout_width="70dp" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="@string/txt_register" android:lines="1" android:layout_toLeftOf="@+id/tbtnLogin" android:layout_alignParentTop="true"/>
</RelativeLayout>
