<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="#ffffff" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textColor="#9a9a9a" android:gravity="center" android:id="@+id/textView2" android:background="#f8f8f8" android:padding="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/lot_selection" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/func1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toLeftOf="@+id/divider" app:layout_constraintTop_toBottomOf="@+id/textView2">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/building_selection_tc_select_btn" android:background="@drawable/selsct_red_l" android:padding="8dp" android:layout_width="wrap_content" android:layout_height="match_parent">
            <TextView android:id="@+id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4dp" android:text="@string/shi_min_road" android:layout_weight="1"/>
            <TextView android:textSize="24sp" android:textStyle="bold" android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4dp" android:text="@string/tc_part" android:layout_weight="1"/>
            <TextView android:textSize="18sp" android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/under_ground" android:layout_weight="1"/>
        </LinearLayout>
        <TextView android:id="@+id/remain_lots_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/remain_lots"/>
        <TextView android:textSize="18sp" android:id="@+id/building_selection_remain_tc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="20"/>
        <Button android:textColor="#ffffff" android:id="@+id/building_selection_tc_map_guide_btn" android:background="@drawable/btn_primary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/map_guide"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/func2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" app:layout_constraintLeft_toRightOf="@+id/divider" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/textView2">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/building_selection_gc_select_btn" android:padding="8dp" android:layout_width="wrap_content" android:layout_height="match_parent">
            <TextView android:id="@+id/textView52" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4dp" android:text="@string/shi_min_road" android:layout_weight="1"/>
            <TextView android:textSize="24sp" android:textStyle="bold" android:id="@+id/textView72" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4dp" android:text="@string/gc_part" android:layout_weight="1"/>
            <TextView android:textSize="18sp" android:id="@+id/textView61" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/under_ground" android:layout_weight="1"/>
        </LinearLayout>
        <TextView android:id="@+id/remain_lots_title_gc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/remain_lots"/>
        <TextView android:textSize="18sp" android:id="@+id/building_selection_remain_gc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="20"/>
        <Button android:textColor="#ffffff" android:id="@+id/building_selection_gc_map_guide_btn" android:background="@drawable/btn_primary" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/map_guide"/>
    </LinearLayout>
    <TextView android:id="@+id/divider" android:background="#d8d8d8" android:layout_width="1dp" android:layout_height="0dp" android:layout_marginTop="16dp" android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textView3" app:layout_constraintLeft_toRightOf="@+id/func1" app:layout_constraintRight_toLeftOf="@+id/func2" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <TextView android:textColor="#9a9a9a" android:gravity="center" android:id="@+id/textView3" android:background="#f8f8f8" android:padding="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/search_condition_selection" app:layout_constraintHorizontal_bias="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/func1"/>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/textView3">
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="16dp" android:layout_marginBottom="16dp">
            <TextView android:textStyle="bold" android:gravity="center" android:id="@+id/building_selection_search_type_licence" android:background="@drawable/selsct_red_s" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="64dp" android:layout_marginRight="24dp" android:text="@string/search_licence" android:layout_weight="1"/>
            <TextView android:gravity="center" android:id="@+id/building_selection_search_type_lot_code" android:background="@drawable/selsct_red_s" android:paddingTop="8dp" android:paddingBottom="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginRight="64dp" android:text="@string/search_lot_code" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/input_blue" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="32dp" android:layout_marginRight="32dp" android:layout_marginBottom="16dp">
            <ImageView android:layout_gravity="center" android:id="@+id/imageView2" android:layout_width="20dp" android:layout_height="20dp" android:layout_weight="1" android:foregroundGravity="center" app:srcCompat="@drawable/ic_search"/>
            <EditText android:id="@+id/building_selection_keyword" android:background="@null" android:padding="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/hint_car_licence" android:ems="10" android:layout_weight="4" android:inputType="textCapCharacters"/>
        </LinearLayout>
        <Button android:textColor="#ffffff" android:id="@+id/building_selection_search_btn" android:background="@drawable/btn_primary" android:paddingLeft="32dp" android:paddingRight="32dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/search_car"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
