<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="#dd000000" android:id="@+id/txtHintTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="23dp" android:layout_marginTop="20dp" android:text="@string/txt_map_function_hint_title" android:layout_alignParentTop="true" android:layout_marginStart="23dp" android:layout_alignParentStart="true"/>
    <ImageView android:id="@+id/imgVision" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginTop="27dp" android:src="@drawable/icon_direction_off" android:adjustViewBounds="true" android:layout_below="@+id/txtHintTitle" android:layout_alignStart="@+id/txtHintTitle"/>
    <TextView android:textSize="18sp" android:textColor="#4e4d50" android:id="@+id/txtVisionTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/txt_map_function_hint_vision_title" android:layout_alignTop="@+id/imgVision" android:layout_toEndOf="@+id/imgVision"/>
    <TextView android:textSize="16sp" android:textColor="#89000000" android:id="@+id/txtVisionDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_marginRight="20dp" android:maxWidth="171dp" android:text="@string/txt_map_function_hint_vision_desc" android:minLines="2" android:layout_below="@+id/txtVisionTitle" android:layout_alignLeft="@+id/txtVisionTitle" android:layout_toEndOf="@+id/imgVision"/>
    <ImageView android:id="@+id/imgPosition" android:layout_width="50dp" android:layout_height="50dp" android:layout_marginTop="20dp" android:src="@drawable/icon_location" android:adjustViewBounds="true" android:layout_below="@+id/txtVisionDesc" android:layout_alignStart="@+id/txtHintTitle"/>
    <TextView android:textSize="18sp" android:textColor="#4e4d50" android:id="@+id/txtPositionTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:text="@string/txt_map_function_hint_position_title" android:layout_alignTop="@+id/imgPosition" android:layout_toEndOf="@+id/imgPosition"/>
    <TextView android:textSize="16sp" android:textColor="#89000000" android:id="@+id/txtPositionDesc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_marginRight="20dp" android:layout_marginBottom="20dp" android:maxWidth="171dp" android:text="@string/txt_map_function_hint_position_desc" android:minLines="2" android:layout_below="@+id/txtPositionTitle" android:layout_alignLeft="@+id/txtPositionTitle" android:layout_toEndOf="@+id/imgPosition"/>
</RelativeLayout>
