<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/imgSetting01" android:layout_width="55dp" android:layout_height="wrap_content" android:layout_marginTop="14dp" android:adjustViewBounds="true" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@mipmap/tutorial_setting01"/>
    <ImageView android:id="@+id/imgSetting02" android:layout_width="240dp" android:layout_height="wrap_content" android:adjustViewBounds="true" android:layout_marginStart="32dp" android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/imgSetting01" app:srcCompat="@mipmap/tutorial_setting02"/>
    <TextView android:textSize="19.5sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/textView14" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/txt_tur_04_desc" android:lineSpacingExtra="10sp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/imgSetting02"/>
    <TextView android:textSize="12sp" android:textColor="@color/white" android:id="@+id/textView15" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/txt_setting" app:layout_constraintEnd_toEndOf="@+id/imgSetting02" app:layout_constraintStart_toStartOf="@+id/imgSetting02" app:layout_constraintTop_toTopOf="@+id/imgSetting02"/>
    <TextView android:textSize="10sp" android:textColor="@color/dark_gray" android:id="@+id/textView16" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="55dp" android:text="@string/btxt_barrier_free_route" android:layout_marginStart="15dp" app:layout_constraintStart_toStartOf="@+id/imgSetting02" app:layout_constraintTop_toTopOf="@+id/imgSetting02"/>
    <TextView android:textSize="10sp" android:textColor="@color/dark_gray" android:id="@+id/textView17" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="13dp" android:text="@string/btxt_tts" app:layout_constraintStart_toStartOf="@+id/textView16" app:layout_constraintTop_toBottomOf="@+id/textView16"/>
    <TextView android:textSize="10sp" android:textColor="@color/dark_gray" android:id="@+id/textView18" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="13dp" android:text="@string/btxt_push_message" app:layout_constraintStart_toStartOf="@+id/textView16" app:layout_constraintTop_toBottomOf="@+id/textView17"/>
</android.support.constraint.ConstraintLayout>
